<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Home Button -->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <!-- Add Button -->
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <!-- Services Button -->
    <item
        android:id="@+id/nav_services"
        android:icon="@drawable/ic_services"
        android:title="@string/services"
        app:showAsAction="ifRoom" />

    <!-- Settings Button -->
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>